# try-agda

./: .gitignore  .gitmodules  LICENSE  README.md  try-agda.cabal
resources/: index.html
src/: Application.hs  Main.hs  Site.hs
src/AgdaComm/: TypeCheck.hs
src/Api/: Core.hs  Post.hs
src/Api/Services/: AgdaService.hs
src/Type/: Snippet.hs  SnippetError.hs
