name:                try-agda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://github.com/qwe2/try-agda
license:             Apache-2.0
license-file:        LICENSE
author:              István Gansperger
maintainer:          gansperger@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.2

executable try-agda
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends:
    aeson                     >= 0.8.0.2,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.14    && < 0.15,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1     && < 0.3,
    Agda                      >= 2.4.2.3,
    base                      >= 4.4     && <5,
    lens                      >= 3.7.6   && <4.7,
    transformers              >= 0.4.0.0,
    json-schema               >= 0.7.3.3,
    filepath,
    directory,
    uuid,
    random

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
